<resources>
    <string name="app_name">Wecker</string>

    <!--> Uhrzeiten  <-->
    <string name="time">8:00</string>

    <!--> Wochentage  <-->
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>

    <!--> Buttons  <-->
    <string name="editImageButton">editImageButton</string>
    <string name="OKButton">OK</string>


</resources>
