<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EDED"
    android:backgroundTint="#3C3838"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="54dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/time"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <ImageButton
        android:id="@+id/editImageButtonAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#1DB954"
        android:contentDescription="@string/editImageButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="14dp"
        android:layout_height="20dp"
        android:foregroundTint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="14dp"
        android:layout_height="20dp"
        android:drawableTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:text="@string/monday"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="14dp"
        android:layout_height="20dp"
        android:drawableTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:text="@string/wednesday"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="14dp"
        android:layout_height="20dp"
        android:drawableTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:text="@string/tuesday"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="14dp"
        android:layout_height="20dp"
        android:drawableTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:text="@string/saturday"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="14dp"
        android:layout_height="20dp"
        android:layout_marginEnd="48dp"
        android:drawableTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:text="@string/sunday"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="14dp"
        android:layout_height="20dp"
        android:drawableTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:text="@string/friday"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:buttonTint="#A33636"
        android:thumbTint="#1DB954"
        android:trackTint="#EDBEE5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

</androidx.constraintlayout.widget.ConstraintLayout>